Modify read and write operations